codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__onboarding_screen__tests__needs_login_screen_api_key_configured.snap
---
source: tui/src/onboarding/onboarding_screen.rs
expression: rendered
---
  Welcome to mcodex, an OpenAI Codex-derived command-line coding agent

✓ API key configured

  mcodex will use usage-based billing with your API key.
