codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__onboarding_screen__tests__pooled_only_notice_screen_initial.snap
---
source: tui/src/onboarding/onboarding_screen.rs
expression: render_to_string(&screen)
---
  Welcome to mcodex, an OpenAI Codex-derived command-line coding agent

  Pooled access is available

  You can continue with pooled access or hand off to login.

  Press enter to continue, press l to log in, or press n to hide and con
