codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__onboarding_screen__tests__pooled_paused_notice_inline_error.snap
---
source: tui/src/onboarding/onboarding_screen.rs
expression: render_to_string(&screen)
---
  Welcome to Codex, OpenAI's command-line coding agent

  Pooled access is paused

  Pooled access is paused for this startup. Resume it or hand off to
  login.

  Press enter to resume, or press l to log in

  resume failed
